force-app/main/default/objects/TPO_Pool__c/TPO_Pool__c.object-meta.xml
<CustomObject>
    <label>TPO Pool</label>
    <nameField>
        <label>TPO Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPO Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>