force-app/main/default/objects/TPO_Pool__c/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <description>Date of the Bid</description>
    <label>Bid Date</label>
    <type>Date</type>
</CustomField>