force-app/main/default/objects/TPO_Pool__c/fields/Bid_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Expiration_Date__c</fullName>
    <description>Bid Date plus 30 days</description>
    <formula>Bid_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bid Date plus 30 days</inlineHelpText>
    <label>Bid Expiration Date</label>
    <type>Date</type>
</CustomField>