force-app/main/default/objects/TPO_Pool__c/fields/Number_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loans__c</fullName>
    <description>Number of Loans included in this Tape</description>
    <inlineHelpText>Number of Loans included in this Tape</inlineHelpText>
    <label># of Loans</label>
    <summaryForeignKey>TPO_Pool_x_Deal__c.TPO_Pool__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>