force-app/main/default/objects/TPO_Pool__c/fields/Number_of_Loans_Bid_On_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Loans_Bid_On_Purchased__c</fullName>
    <description>This is a count of the Loans being bid on or purchased</description>
    <inlineHelpText>This is a count of the Loans being bid on or purchased</inlineHelpText>
    <label># of Loans Bid On/Purchased</label>
    <summaryFilterItems>
        <field>TPO_Pool_x_Deal__c.Status__c</field>
        <operation>notEqual</operation>
        <value>No Bid</value>
    </summaryFilterItems>
    <summaryForeignKey>TPO_Pool_x_Deal__c.TPO_Pool__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>