force-app/main/default/objects/TPO_Pool__c/fields/Percent_of_Loans_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Loans_Purchased__c</fullName>
    <description>The percent of Loans being bid on or purchased out of the entire pool of Loans</description>
    <formula>Number_of_Loans__c /  Number_of_Loans_Bid_On_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percent of Loans being bid on or purchased out of the entire pool of Loans</inlineHelpText>
    <label>% of Loans Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>