force-app/main/default/objects/TPO_Pool__c/fields/Total_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Bid_Amount__c</fullName>
    <label>Total Bid Amount</label>
    <summarizedField>TPO_Pool_x_Deal__c.Bid_Amount__c</summarizedField>
    <summaryForeignKey>TPO_Pool_x_Deal__c.TPO_Pool__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>