force-app/main/default/objects/TPO_Pool__c/fields/Total_Original_UPB__c.field-meta.xml
<CustomField>
    <fullName>Total_Original_UPB__c</fullName>
    <description>Total UPB at the time of these Loans being purchased</description>
    <inlineHelpText>Total UPB at the time of these Loans being purchased</inlineHelpText>
    <label>Total Original UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>