force-app/main/default/objects/TPO_Pool__c/recordTypes/DSCR_Loans.recordType-meta.xml
<RecordType>
    <fullName>DSCR_Loans</fullName>
    <active>true</active>
    <label>DSCR Loans</label>
</RecordType>